ci: run check-minimal after clippy-check to ensure cache is properly setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,10 @@ jobs:
       RUSTFLAGS: "-D warnings"
 
     runs-on: ubuntu-latest
+    needs:
+      - clippy-check
+      - format
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
