android: use ndk-rs in anvil
Original: b6bf71357449db1c15968d67b372420ecccf5f13

Signed-off-by: Nefo Fortressia <nefothingy@hotmail.com>

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -20,6 +20,13 @@ slog-stdlog = "4.1.0"
 slog-scope = "4.4.0"
 xkbcommon = "0.4.0"
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
+# This dependency will only be included when targeting Android
+[target.'cfg(target_os = "android")'.dependencies]
+ndk-glue = "0.6.2" # Substitute this with the latest ndk-glue version you wish to use
+
 [dependencies.smithay]
 path = ".."
 default-features = false
