--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,9 +57,6 @@ winit = { version = "0.27.1", default-features = false, features = ["wayland", "
 x11rb = { version = "0.10.0", optional = true }
 xkbcommon = "0.4.0"
 scan_fmt = { version = "0.2.3", default-features = false }
-
-=======
-
 wayland-egl = {  path = "../wayland-rs/wayland-egl", optional = true }
 wayland-protocols = {  path = "../wayland-rs/wayland-protocols", features = ["unstable", "staging", "server"], optional = true }
 wayland-protocols-wlr = {   path = "../wayland-rs/wayland-protocols-wlr", features = ["server"]}
@@ -74,7 +71,9 @@ scan_fmt = { version = "0.2.3", default-features = false }
 # This dependency will only be included when targeting Android
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.6.2" # Substitute this with the latest ndk-glue version you wish to use
-calloop = { git = "https://github.com/EchidnaHQ/calloop.git", branch = "android-fix" }
+
+
+ndk = "0.5.0"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 
@@ -96,19 +95,14 @@ slog-term = "2.3"
 [build-dependencies]
 gl_generator = { version = "0.14", optional = true }
 pkg-config = { version = "0.3.17", optional = true }
+cfg-if = "1.0.0"
 
 [features]
-<<<<<<< HEAD
-<<<<<<< HEAD
 default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
-=======
 default = [  "backend_winit", "desktop", "renderer_gl", "xwayland", "wayland_frontend", "slog-stdlog"]
->>>>>>> 0d6fa331b (android: Fix dependencies for android target)
 backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
-=======
 default = [ "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog"]
 backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl", "renderer_gl"]
->>>>>>> b30b5919b (Remove non-Winit backends from default features)
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
 backend_gbm = ["gbm"]
