--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 edition = "2018"
 
 [dependencies]
+cfg-if = "1.0.0"
 bitflags = "1.2.1"
 thiserror = "1"
 xcursor = { version = "0.3.3", optional = true }
@@ -65,10 +66,14 @@ build_targets = [ "aarch64-linux-android" ] # For now we'll just build for Aarch
 # Name for final APK file.
 # Defaults to package name.
 apk_name = "waylovely"
-runtime_libs = "../../app/libs"
+runtime_libs = "../../prebuilt-libs"
+# Unsure to
 
 # See https://developer.android.com/guide/topics/manifest/uses-sdk-element
 
 [package.metadata.android.sdk]
 min_sdk_version = 29
 target_sdk_version = 32
+
+[package.metadata.android.application]
+label = "Waylovely"
