--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,7 @@ calloop = "0.10.1"
 cgmath = "0.18.0"
 dbus = { version = "0.9.4", optional = true }
 downcast-rs = "1.2.0"
-
-
+cfg-if = "1.0.0"
 indexmap = { version = "1.7", optional = true }
 lazy_static = "1"
 libc = "0.2.103"
@@ -56,6 +55,7 @@ wayland-backend = { version = "=0.1.0-beta.8", optional = true }
 winit = { version = "0.27.1", default-features = false, features = ["wayland", "wayland-dlopen", "x11"], optional = true }
 x11rb = { version = "0.10.0", optional = true }
 xkbcommon = "0.4.0"
+drm-fourcc = "^2.1.1"
 scan_fmt = { version = "0.2.3", default-features = false }
 wayland-egl = {  path = "../wayland-rs/wayland-egl", optional = true }
 wayland-protocols = {  path = "../wayland-rs/wayland-protocols", features = ["unstable", "staging", "server"], optional = true }
@@ -76,7 +76,6 @@ ndk-glue = "0.6.2" # Substitute this with the latest ndk-glue version you wish t
 ndk = "0.5.0"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-
 udev = { version = "0.6", optional = true }
 libseat= { version = "0.1.1", optional = true }
 input = { version = "0.7", default-features = false, features=["libinput_1_19"], optional = true }
@@ -84,7 +83,7 @@ drm-fourcc = "^2.1.1"
 drm = { version = "0.6.1", optional = true }
 drm-ffi = { version = "0.2.1", optional = true }
 gbm = { version = "0.8.0", optional = true, default-features = false, features = ["drm-support"] }
-input = { version = "0.7", default-features = false, features =["libinput_1_14"], optional = true }
+
 
 [patch.crates-io]
 winit = { git = "https://github.com/rust-windowing/winit", rev = "4c39b3188cee29548761b57f38e4aa046cbe31ea" }
@@ -98,8 +97,7 @@ pkg-config = { version = "0.3.17", optional = true }
 cfg-if = "1.0.0"
 
 [features]
-default = ["backend_winit", "desktop", "renderer_gl", "renderer_multi", "wayland_frontend", "slog-stdlog", ]
-default = [  "backend_winit", "desktop", "renderer_gl", "xwayland", "wayland_frontend", "slog-stdlog"]
+default = ["backend_winit", "desktop", "renderer_gl", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
 backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
 default = [ "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog"]
 backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl", "renderer_gl"]
