renderer: fix test compilation without default features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,11 +84,11 @@ backend_vulkan = ["ash", "scopeguard"]
 backend_session_logind = ["dbus", "backend_session", "pkg-config"]
 backend_session_elogind = ["backend_session_logind"]
 backend_session_libseat = ["backend_session", "libseat"]
-desktop = ["indexmap", "wayland_frontend"]
+desktop = ["wayland_frontend"]
 renderer_gl = ["gl_generator", "backend_egl"]
 renderer_multi = ["backend_drm"]
 use_system_lib = ["wayland_frontend", "wayland-backend/server_system", "wayland-sys"]
-wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
+wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile", "indexmap"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["wayland_frontend"]
 test_all_features = ["default"]
