--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -35,7 +35,8 @@ features = [ "composite" ]
 gl_generator = "0.14"
 
 [features]
-default = [ "egl", "winit", "x11", "udev", "logind", "xwayland" ]
+
+default = [ "egl", "winit", "xwayland" ]
 egl = [ "smithay/use_system_lib", "smithay/backend_egl" ]
 winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "image", "smithay/renderer_gl", "smithay/renderer_multi", "xcursor" ]
@@ -46,3 +47,4 @@ xwayland = [ "smithay/xwayland", "x11rb", "smithay/x11rb_event_source" ]
 x11 = [ "smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl" ]
 debug = [ "fps_ticker", "image/png" ]
 test_all_features = ["default", "debug"]
+
