--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -526,3 +526,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/doc
+          force_orphan: true
