--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ drm = { version = "0.7.0", optional = true }
 drm-ffi = { version = "0.3.0", optional = true }
 gbm = { version = "0.9.0", optional = true, default-features = false, features = ["drm-support"] }
 input = { version = "0.7", default-features = false, features=["libinput_1_14"], optional = true }
-indexmap = { version = "1.7", optional = true }
+indexmap = "1.7"
 lazy_static = "1"
 libc = "0.2.103"
 libseat= { version = "0.1.1", optional = true }
@@ -86,11 +86,11 @@ backend_vulkan = ["ash", "scopeguard"]
 backend_session_logind = ["dbus", "backend_session", "pkg-config"]
 backend_session_elogind = ["backend_session_logind"]
 backend_session_libseat = ["backend_session", "libseat"]
-desktop = ["wayland_frontend"]
+desktop = []
 renderer_gl = ["gl_generator", "backend_egl"]
 renderer_multi = ["backend_drm"]
 use_system_lib = ["wayland_frontend", "wayland-backend/server_system", "wayland-sys"]
-wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile", "indexmap"]
+wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["wayland_frontend"]
 test_all_features = ["default"]
