--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ drm-fourcc = "^2.2.0"
 drm = { version = "0.7.0", optional = true }
 drm-ffi = { version = "0.3.0", optional = true }
 gbm = { version = "0.9.0", optional = true, default-features = false, features = ["drm-support"] }
+glow = { version = "0.11.2", optional = true }
 input = { version = "0.7", default-features = false, features=["libinput_1_14"], optional = true }
 indexmap = { version = "1.7", optional = true }
 lazy_static = "1"
@@ -85,12 +86,13 @@ backend_session_elogind = ["backend_session_logind"]
 backend_session_libseat = ["backend_session", "libseat"]
 desktop = ["indexmap", "wayland_frontend"]
 renderer_gl = ["gl_generator", "backend_egl"]
+renderer_glow = ["renderer_gl", "glow"]
 renderer_multi = ["backend_drm"]
 use_system_lib = ["wayland_frontend", "wayland-backend/server_system", "wayland-sys"]
 wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["wayland_frontend"]
-test_all_features = ["default"]
+test_all_features = ["default", "renderer_glow"]
 
 [[example]]
 name = "minimal"
