--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ members = [
 ]
 
 [dependencies]
-cfg-if = "1.0.0"
 appendlist = "1.4"
 # Intentionally pick a commit from "0.37-stable" branch since additions for 0.37.1 are used
 ash = { git = "https://github.com/ash-rs/ash", rev = "62960ad680207e8496ae19ebd11f7c7ae8422e27", optional = true }
@@ -45,27 +44,17 @@ slog = "2"
 slog-stdlog = { version = "4", optional = true }
 tempfile = { version = "3.0", optional = true }
 thiserror = "1.0.25"
-wayland-egl = { version = "=0.30.0-beta.8", optional = true }
-wayland-protocols = { version = "=0.30.0-beta.8", features = ["unstable", "staging", "server"], optional = true }
+wayland-egl = { version = "=0.30.0-beta.9", optional = true }
+wayland-protocols = { version = "=0.30.0-beta.9", features = ["unstable", "staging", "server"], optional = true }
 wayland-protocols-wlr = { version = "=0.1.0-beta.8", features = ["server"]}
 wayland-protocols-misc = { version = "=0.1.0-beta.8", features = ["server"]}
-wayland-server = { version = "=0.30.0-beta.8", optional = true }
-wayland-sys = { version = "=0.30.0-beta.8", optional = true }
+wayland-server = { version = "=0.30.0-beta.9", optional = true }
+wayland-sys = { version = "=0.30.0-beta.9", optional = true }
 wayland-backend = { version = "=0.1.0-beta.8", optional = true }
 winit = { version = "0.27.1", default-features = false, features = ["wayland", "wayland-dlopen", "x11"], optional = true }
 x11rb = { version = "0.10.0", optional = true }
 xkbcommon = "0.4.0"
 drm-fourcc = "^2.1.1"
-scan_fmt = { version = "0.2.3", default-features = false }
-wayland-egl = {  path = "../wayland-rs/wayland-egl", optional = true }
-wayland-protocols = {  path = "../wayland-rs/wayland-protocols", features = ["unstable", "staging", "server"], optional = true }
-wayland-protocols-wlr = {   path = "../wayland-rs/wayland-protocols-wlr", features = ["server"]}
-wayland-server = {   path = "../wayland-rs/wayland-server",  optional = true }
-wayland-sys = {  path = "../wayland-rs/wayland-sys",  optional = true }
-wayland-backend = {  path = "../wayland-rs/wayland-backend", optional = true }
-winit = { version = "0.26", optional = true }
-x11rb = { version = "0.9.0", optional = true }
-xkbcommon = "0.4.0"
 scan_fmt = { version = "0.2.3", default-features = false }
 
 # This dependency will only be included when targeting Android
@@ -98,8 +87,7 @@ cfg-if = "1.0.0"
 
 [features]
 default = ["backend_winit", "desktop", "renderer_gl", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
-backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
-default = [ "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog"]
+# default = [ "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog"]
 backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl", "renderer_gl"]
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
@@ -140,3 +128,4 @@ required-features = ["wayland_frontend"]
 [[example]]
 name = "vulkan"
 required-features = ["backend_vulkan"]
+
