Implement relative pointer protocol
Add helper for the relative pointer protocol, and a way to send relative
pointer events to clients. This also exposes unaccelerated vectors and
microsecond timestamps in pointer events from the libinput backend.

Enables `wlcs` relative pointer test, though what `wlcs` currently
handles seems to be limited at this point.

Adds relative pointer support for Anvil, exposing the global only on the
`udev` backend so clients won't use the protocol but get no events.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -379,7 +379,7 @@ jobs:
             gtest_filter: "XdgOutputV1Test*"
             flag: output
           - job_name: "Pointer input tests"
-            gtest_filter: "*/SurfacePointerMotionTest*"
+            gtest_filter: "*/SurfacePointerMotionTest*:RelativePointer*"
             flag: pointer-input
 
     name: "WLCS: ${{ matrix.job_name }}"
