--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -19,6 +19,7 @@ slog-term = "2.8"
 thiserror = "1"
 xcursor = {version = "0.3.3", optional = true}
 xkbcommon = "0.5.0"
+renderdoc = {version = "0.10.1", optional = true}
 
 [dependencies.smithay]
 default-features = false
@@ -35,7 +36,7 @@ version = "0.10.0"
 gl_generator = "0.14"
 
 [features]
-debug = ["fps_ticker", "image/png"]
+debug = ["fps_ticker", "image/png", "renderdoc"]
 default = ["egl", "winit", "x11", "udev", "logind", "xwayland"]
 egl = ["smithay/use_system_lib", "smithay/backend_egl"]
 elogind = ["logind", "smithay/backend_session_elogind"]
