--- a/wlcs_anvil/Cargo.toml
+++ b/wlcs_anvil/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 smithay = { path = "..", default-features=false, features=["wayland_frontend", "backend_egl", "use_system_lib"] }
 anvil = { path = "../anvil", default-features=false }
-wayland-sys = { version = "=0.30.0-beta.13", features = ["client", "server"] }
+wayland-sys = { version = "0.30.1", features = ["client", "server"] }
 libc = "0.2"
 memoffset = "0.6"
 slog = "2.0"
