--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,16 +28,16 @@ appendlist = "1.4"
 # Intentionally pick a commit from "0.37-stable" branch since additions for 0.37.1 are used
 ash = { version = "0.37.1", optional = true }
 bitflags = "1"
-calloop = "0.10.1"
+calloop = { git = "https://github.com/ids1024/calloop", branch = "io-lifetimes" }
 cgmath = "0.18.0"
 dbus = { version = "0.9.4", optional = true }
 downcast-rs = "1.2.0"
 drm-fourcc = "^2.2.0"
-drm = { version = "0.7.0", optional = true }
+drm = { git = "https://github.com/smithay/drm-rs", optional = true }
 drm-ffi = { version = "0.3.0", optional = true }
-gbm = { version = "0.9.0", optional = true, default-features = false, features = ["drm-support"] }
+gbm = { git = "https://github.com/ids1024/gbm.rs", branch = "io-safety", optional = true, default-features = false, features = ["drm-support"] }
 glow = { version = "0.11.2", optional = true }
-input = { version = "0.7", default-features = false, features=["libinput_1_14"], optional = true }
+input = { git = "https://github.com/ids1024/input.rs", branch = "as-fd", default-features = false, features=["libinput_1_14"], optional = true }
 indexmap = "1.7"
 lazy_static = "1"
 libc = "0.2.103"
@@ -51,7 +51,7 @@ slog = "2"
 slog-stdlog = { version = "4", optional = true }
 tempfile = { version = "3.0", optional = true }
 thiserror = "1.0.25"
-udev = { version = "0.6", optional = true }
+udev = { git = "https://github.com/Smithay/udev-rs", optional = true }
 wayland-egl = { version = "=0.30.0-beta.14", optional = true }
 wayland-protocols = { version = "=0.30.0-beta.14", features = ["unstable", "staging", "server"], optional = true }
 wayland-protocols-wlr = { version = "=0.1.0-beta.14", features = ["server"]}
@@ -74,6 +74,7 @@ cc = { version = "1.0", optional = true }
 
 [features]
 default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
+#default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
 backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
@@ -112,3 +113,6 @@ required-features = ["wayland_frontend"]
 [[example]]
 name = "vulkan"
 required-features = ["backend_vulkan"]
+
+[patch.crates-io]
+wayland-server = { git = "https://github.com/ids1024/wayland-rs", branch = "as-fd-beta14" }
