--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ ash = { version = "0.37.1", optional = true }
 bitflags = "1"
 calloop = "0.10.1"
 cgmath = "0.18.0"
-dbus = { version = "0.9.4", optional = true }
 downcast-rs = "1.2.0"
 drm-fourcc = "^2.2.0"
 drm = { version = "0.7.0", optional = true }
@@ -41,7 +40,7 @@ input = { version = "0.7", default-features = false, features=["libinput_1_14"],
 indexmap = "1.7"
 lazy_static = "1"
 libc = "0.2.103"
-libseat= { version = "0.1.1", optional = true }
+libseat= { version = "0.1.7", optional = true }
 libloading = { version="0.7.0", optional = true } 
 nix = "0.24.1"
 once_cell = "1.8.0"
@@ -73,7 +72,7 @@ pkg-config = { version = "0.3.17", optional = true }
 cc = { version = "1.0", optional = true }
 
 [features]
-default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
+default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_libseat", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
 backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
@@ -84,8 +83,6 @@ backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev", "input/udev"]
 backend_vulkan = ["ash", "scopeguard"]
-backend_session_logind = ["dbus", "backend_session", "pkg-config"]
-backend_session_elogind = ["backend_session_logind"]
 backend_session_libseat = ["backend_session", "libseat"]
 desktop = []
 renderer_gl = ["gl_generator", "backend_egl"]
