--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ drm = { version = "0.8.0", optional = true }
 drm-ffi = { version = "0.4.0", optional = true }
 gbm = { version = "0.11.0", optional = true, default-features = false, features = ["drm-support"] }
 glow = { version = "0.11.2", optional = true }
-input = { version = "0.8.1", default-features = false, features=["libinput_1_14"], optional = true }
+input = { version = "0.8.2", default-features = false, features=["libinput_1_14"], optional = true }
 indexmap = "1.7"
 lazy_static = "1"
 libc = "0.2.103"
@@ -86,6 +86,7 @@ backend_udev = ["udev", "input/udev"]
 backend_vulkan = ["ash", "scopeguard"]
 backend_session_libseat = ["backend_session", "libseat"]
 desktop = []
+libinput_1_19 = ["input/libinput_1_19"]
 renderer_gl = ["gl_generator", "backend_egl"]
 renderer_glow = ["renderer_gl", "glow"]
 renderer_multi = ["backend_drm"]
@@ -93,7 +94,7 @@ use_system_lib = ["wayland_frontend", "wayland-backend/server_system", "wayland-
 wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["encoding", "wayland_frontend", "x11rb/composite", "x11rb_event_source", "scopeguard"]
-test_all_features = ["default", "use_system_lib", "renderer_glow"]
+test_all_features = ["default", "use_system_lib", "renderer_glow", "libinput_1_19"]
 
 [[example]]
 name = "minimal"
