--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_ev
 backend_drm = ["drm", "drm-ffi"]
 backend_gbm = ["gbm", "cc", "pkg-config"]
 backend_gbm_has_fd_for_plane = []
+backend_gbm_has_create_with_modifiers2 = []
 backend_egl = ["gl_generator", "libloading"]
 backend_libinput = ["input"]
 backend_session = []
