--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -54,5 +54,5 @@ udev = [
   "xcursor",
 ]
 winit = ["smithay/backend_winit"]
-x11 = ["smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl"]
+x11 = ["smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl", "smithay/backend_vulkan"]
 xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source"]
